k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: admin-tools
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
        volumeMounts:
          - name: kuma-vol
            mountPath: /app/data
      volumes:
        - name: kuma-vol
          persistentVolumeClaim:
            claimName: kuma-pvc
