k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-svc
  namespace: admin-tools
spec:
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: 3001
