k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: admin-tools
  labels:
    name: uptime-kuma
spec:
  ingressClassName: kong
  rules:
  - host: uptime.example.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuma-svc
            port: 
              number: 80
